--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <!-- .. Plugins ....................................................... -->
 
     <mc3.maven.version>3.3.0-SNAPSHOT</mc3.maven.version>
-    <mc4.maven.version>4.0.0.1</mc4.maven.version>
+    <mc4.maven.version>4.0.2-SNAPSHOT</mc4.maven.version>
 
     <compiler.plugin>3.2</compiler.plugin>
     <release.plugin>2.5.1</release.plugin>
