- bugfix in zip directory layout
git-svn-id: https://sselab.de/lab2/private/svn/MontiCore/trunk/mclang/automaton@22640 3ddcf219-3c89-4d16-bbf6-790a9aa18b9b

--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
                 <format>zip</format>
               </formats>
               <descriptor>src/main/assemblies/zip-assembly.xml</descriptor>
-              <finalName>monticore-cli.zip</finalName>
+              <finalName>monticore-cli</finalName>
               <attach>false</attach>
               <appendAssemblyId>false</appendAssemblyId>
             </configuration>
