--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>4.1.0-SNAPSHOT</monticore.version>
+    <monticore.version>4.1.0</monticore.version>
 
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
@@ -23,7 +23,7 @@
 
     <!-- .. Plugins ....................................................... -->
 
-    <mc4.maven.version>4.1.0-SNAPSHOT</mc4.maven.version>
+    <mc4.maven.version>4.1.0</mc4.maven.version>
 
     <assembly.plugin>2.5.3</assembly.plugin>
     <compiler.plugin>3.2</compiler.plugin>
