--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,18 @@
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>4.1.1</monticore.version>
+    <monticore.version>4.1.2</monticore.version>
 
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
     <junit.version>4.11</junit.version>
-    <se-commons.version>1.7.0-SNAPSHOT</se-commons.version>
+    <se-commons.version>1.7.0</se-commons.version>
     <antlr.version>4.3</antlr.version>
     <logback.version>1.1.2</logback.version>
 
     <!-- .. Plugins ....................................................... -->
 
-    <mc4.maven.version>4.1.1</mc4.maven.version>
+    <mc4.maven.version>4.1.2</mc4.maven.version>
 
     <assembly.plugin>2.5.3</assembly.plugin>
     <compiler.plugin>3.2</compiler.plugin>
