- use new Nexus URL
git-svn-id: https://sselab.de/lab2/private/svn/MontiCore/trunk/mclang/automaton@23709 3ddcf219-3c89-4d16-bbf6-790a9aa18b9b

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
   <!-- == PROJECT METAINFORMATION ========================================= -->
 
   <name>Automaton</name>
-  <url>http://lab11.se.rwth-aachen.de/nexus/service/local/repositories/se-sites/content/monticore/automaton/${project.version}/</url>
+  <url>http://nexus.se.rwth-aachen.de/service/local/repositories/se-sites/content/monticore/automaton/${project.version}/</url>
   <inceptionYear>2013</inceptionYear>
 
   <organization>
@@ -241,15 +241,15 @@
   <distributionManagement>
     <repository>
       <id>se-nexus</id>
-      <url>http://lab11.se.rwth-aachen.de/nexus/content/repositories/monticore-releases/</url>
+      <url>http://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/</url>
     </repository>
     <snapshotRepository>
       <id>se-nexus</id>
-      <url>http://lab11.se.rwth-aachen.de/nexus/content/repositories/monticore-snapshots/</url>
+      <url>http://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/</url>
     </snapshotRepository>
     <site>
       <id>se-nexus</id>
-      <url>dav:http://lab11.se.rwth-aachen.de/nexus/content/sites/se-sites/monticore/automaton/${project.version}/</url>
+      <url>dav:http://nexus.se.rwth-aachen.de/content/sites/se-sites/monticore/automaton/${project.version}/</url>
     </site>
   </distributionManagement>
 
