--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>4.1.5-SNAPSHOT</monticore.version>
+    <monticore.version>4.1.6-SNAPSHOT</monticore.version>
 
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
     <junit.version>4.11</junit.version>
-    <se-commons.version>1.7.0</se-commons.version>
+    <se-commons.version>1.7.5-SNAPSHOT</se-commons.version>
     <antlr.version>4.5</antlr.version>
     <logback.version>1.1.2</logback.version>
 
