- first usage of the new reporting report
git-svn-id: https://sselab.de/lab2/private/svn/MontiCore/trunk/mclang/automaton@24742 3ddcf219-3c89-4d16-bbf6-790a9aa18b9b

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
     <junit.version>4.11</junit.version>
-    <se-commons.version>1.7.5-SNAPSHOT</se-commons.version>
     <antlr.version>4.5</antlr.version>
     <logback.version>1.1.2</logback.version>
 
@@ -162,12 +161,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>de.se_rwth.commons</groupId>
-      <artifactId>se-commons-logging</artifactId>
-      <version>${se-commons.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guava.version}</version>
@@ -237,32 +230,10 @@
         <artifactId>monticore-maven-plugin</artifactId>
         <version>${monticore.version}</version>
         <inherited>false</inherited>
-        <configuration>
-          <skipDefaultScripts>true</skipDefaultScripts>
-          <additionalOutputs>
-            <additionalOutput>Automaton/01_Summary.txt</additionalOutput>
-            <additionalOutput>Automaton/02_GeneratedFiles.txt</additionalOutput>
-            <additionalOutput>Automaton/03_HandwrittenCodeFiles.txt</additionalOutput>
-            <additionalOutput>Automaton/04_Templates.txt</additionalOutput>
-            <additionalOutput>Automaton/05_HookPoint.txt</additionalOutput>
-            <additionalOutput>Automaton/06_Instantiations.txt</additionalOutput>
-            <additionalOutput>Automaton/07_Variables.txt</additionalOutput>
-            <additionalOutput>Automaton/08_Detailed.txt</additionalOutput>
-            <additionalOutput>Automaton/09_TemplateTree.txt</additionalOutput>
-            <additionalOutput>Automaton/10_NodeTree.txt</additionalOutput>
-            <additionalOutput>Automaton/11_NodeTreeDecorated.txt</additionalOutput>
-            <additionalOutput>Automaton/12_TypesOfNodes.txt</additionalOutput>
-            <additionalOutput>Automaton/13_SymbolTable.txt</additionalOutput>
-            <additionalOutput>Automaton/14_Transformations.txt</additionalOutput>
-            <additionalOutput>Automaton/15_ArtifactGml.gml</additionalOutput>
-            <additionalOutput>Automaton/16_ArtifactGv.gv</additionalOutput>
-            <additionalOutput>Automaton/17_InputOutputFiles.txt</additionalOutput>
-          </additionalOutputs>
-        </configuration>
         <reportSets>
           <reportSet>
             <reports>
-              <report>script-report</report>
+              <report>reporting-report</report>
             </reports>
           </reportSet>
         </reportSets>
