use the last MontiCore snapshot version 4.4.1-SNAPSHOT
git-svn-id: https://sselab.de/lab2/private/svn/MontiCore/trunk/mclang/automaton@25449 3ddcf219-3c89-4d16-bbf6-790a9aa18b9b

--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,17 @@
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>4.3.1-SNAPSHOT</monticore.version>
+    <monticore.version>4.4.1-SNAPSHOT</monticore.version>
 
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
     <junit.version>4.11</junit.version>
     <antlr.version>4.5</antlr.version>
     <logback.version>1.1.2</logback.version>
+    <emf.common.version>2.5.0</emf.common.version>
+    <emf.ecore.version>2.5.0</emf.ecore.version>
+    <emf.ecore.xmi.version>2.5.0</emf.ecore.xmi.version>
+    
 
     <!-- .. Plugins ....................................................... -->
 
@@ -160,6 +164,23 @@
   </build>
 
   <dependencies>
+   <!-- EMF dependencies -->
+      <dependency>
+        <groupId>org.mod4j.org.eclipse.emf</groupId>
+        <artifactId>ecore</artifactId>
+        <version>${emf.ecore.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mod4j.org.eclipse.emf.ecore</groupId>
+        <artifactId>xmi</artifactId>
+        <version>${emf.ecore.xmi.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mod4j.org.eclipse.emf</groupId>
+        <artifactId>common</artifactId>
+        <version>${emf.common.version}</version>
+      </dependency>
+      
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -183,6 +204,12 @@
       <groupId>de.monticore</groupId>
       <artifactId>monticore-runtime</artifactId>
       <version>${monticore.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>de.monticore</groupId>
+      <artifactId>monticore-emf-runtime</artifactId>
+        <version>${monticore.version}</version>
     </dependency>
 
     <dependency>
