- switch to latest MC-version - cleaning up dependencies
git-svn-id: https://sselab.de/lab2/private/svn/MontiCore/trunk/mclang/automaton@26454 3ddcf219-3c89-4d16-bbf6-790a9aa18b9b

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>4.5.2</monticore.version>
+    <monticore.version>4.5.3</monticore.version>
 
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
@@ -89,6 +89,9 @@
         <version>${monticore.version}</version>
         <executions>
           <execution>
+            <configuration>
+              <script>de/monticore/monticore_noemf.groovy</script>
+            </configuration>
             <goals>
               <goal>generate</goal>
             </goals>
@@ -165,22 +168,31 @@
 
   <dependencies>
     <!-- EMF dependencies -->
+    <!--  
     <dependency>
       <groupId>org.mod4j.org.eclipse.emf</groupId>
       <artifactId>ecore</artifactId>
       <version>${emf.ecore.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>org.mod4j.org.eclipse.emf.ecore</groupId>
       <artifactId>xmi</artifactId>
       <version>${emf.ecore.xmi.version}</version>
     </dependency>
+    
     <dependency>
       <groupId>org.mod4j.org.eclipse.emf</groupId>
       <artifactId>common</artifactId>
       <version>${emf.common.version}</version>
     </dependency>
-
+    
+    <dependency>
+      <groupId>de.monticore</groupId>
+      <artifactId>monticore-emf-runtime</artifactId>
+      <version>${monticore.version}</version>
+    </dependency>
+    -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -208,29 +220,10 @@
 
     <dependency>
       <groupId>de.monticore</groupId>
-      <artifactId>monticore-emf-runtime</artifactId>
-      <version>${monticore.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>de.monticore</groupId>
       <artifactId>monticore-grammar</artifactId>
       <version>${monticore.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>de.monticore</groupId>
-      <artifactId>de.monticore.java</artifactId>
-      <version>4.3.5</version>
-    </dependency>
-
-     <dependency>
-      <groupId>de.monticore</groupId>
-      <artifactId>de.monticore.java</artifactId>
-      <version>4.3.5</version>
-      <classifier>${grammars.classifier}</classifier>
-    </dependency>
- 
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-grammar</artifactId>
