--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 
   <groupId>de.monticore.lang</groupId>
   <artifactId>automaton</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
 
   <properties>
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>4.5.3</monticore.version>
+    <monticore.version>4.5.4-SNAPSHOT</monticore.version>
 
     <guava.version>18.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
