--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
   <inceptionYear>2013</inceptionYear>
 
   <organization>
-    <name>Department of Software Engineering, RWTH Aachen University</name>
+    <name>SE RWTH Aachen</name>
     <url>http://www.se-rwth.de/</url>
   </organization>
 
