--- a/pom.xml
+++ b/pom.xml
@@ -253,15 +253,15 @@
   <distributionManagement>
     <repository>
       <id>se-nexus</id>
-      <url>http://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/</url>
+      <url>https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/</url>
     </repository>
     <snapshotRepository>
       <id>se-nexus</id>
-      <url>http://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/</url>
+      <url>https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/</url>
     </snapshotRepository>
     <site>
       <id>se-nexus</id>
-      <url>dav:http://nexus.se.rwth-aachen.de/content/sites/se-sites/monticore/automaton/${project.version}/</url>
+      <url>dav:https://nexus.se.rwth-aachen.de/content/sites/se-sites/monticore/automaton/${project.version}/</url>
     </site>
   </distributionManagement>
 
