--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <!-- .. Libraries ..................................................... -->
 
-    <monticore.version>5.0.6-SNAPSHOT</monticore.version>
+    <monticore.version>5.0.6.latestGrammar-SNAPSHOT</monticore.version>
     
     <guava.version>23.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
@@ -26,7 +26,7 @@
 
     <!-- .. Plugins ....................................................... -->
 
-    <!-- <mc4.maven.version>${monticore.version}</mc4.maven.version> -->
+    <mc4.maven.version>5.0.6-SNAPSHOT</mc4.maven.version>
 
     <assembly.plugin>2.5.3</assembly.plugin>
     <compiler.plugin>3.2</compiler.plugin>
@@ -86,7 +86,7 @@
       <plugin>
         <groupId>de.monticore.mojo</groupId>
         <artifactId>monticore-maven-plugin</artifactId>
-        <version>${monticore.version}</version>
+        <version>${mc4.maven.version}</version>
         <executions>
           <execution>
             <configuration>
