--- a/pom.xml
+++ b/pom.xml
@@ -186,11 +186,13 @@
     </dependency>
 
     <!-- MontiCore Dependencies -->
+    <!-- use this dependency fpr debugging reasons
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-generator</artifactId>
       <version>${monticore.version}</version>
     </dependency>
+    -->
 
     <dependency>
       <groupId>de.monticore</groupId>
