--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,8 @@ fileTree(grammarDir).each {
     task  "generate${it.getName().substring(0,it.getName().lastIndexOf('.'))}" (type: MCTask) {
         grammar = file g
         outputDir = file "$buildDir/generated-sources/monticore/sourcecode"
-        handcodedPath "$projectDir/src/main/java"
-        modelPath "$grammarDir"
+        handcodedPath file("$projectDir/src/main/java")
+        modelPath file("$grammarDir")
         def incCheckDir = file(grammarDir).toURI().relativize(g.toURI()).toString()
         incCheckDir = incCheckDir.substring(0,incCheckDir.lastIndexOf('.')).toLowerCase()
         def uptoDate = incCheck(outputDir.toString() +"/$incCheckDir/IncGenGradleCheck.txt")
