--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build_gradle:
 pages:
   stage: report
   dependencies:
-    - test_gradle
+    - build_gradle
   cache: {}
   script:
     - mv target/reports/allTests public
