--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
+  
   <!-- == PROJECT COORDINATES ============================================= -->
-
+  
   <groupId>de.monticore.lang</groupId>
   <artifactId>automaton</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
-
+  <version>1.0.0-SNAPSHOT</version>
+  
   <properties>
-
+    
     <!-- .. Libraries ..................................................... -->
-
-    <monticore.version>5.0.7-SNAPSHOT</monticore.version>
+    
+    <monticore.version>5.3.0-SNAPSHOT</monticore.version>
     
     <guava.version>23.0</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
@@ -22,56 +22,56 @@
     <emf.common.version>2.5.0</emf.common.version>
     <emf.ecore.version>2.5.0</emf.ecore.version>
     <emf.ecore.xmi.version>2.5.0</emf.ecore.xmi.version>
-
-
+    
+    
     <!-- .. Plugins ....................................................... -->
-
-    <mc4.maven.version>5.0.7-SNAPSHOT</mc4.maven.version>
-
+    
+    <!-- <mc4.maven.version>${monticore.version}</mc4.maven.version> -->
+    
     <assembly.plugin>2.5.3</assembly.plugin>
     <compiler.plugin>3.2</compiler.plugin>
     <release.plugin>2.5.1</release.plugin>
     <source.plugin>2.4</source.plugin>
     <surefire.plugin>2.18.1</surefire.plugin>
-
+    
     <!-- Classifiers -->
-
+    
     <grammars.classifier>grammars</grammars.classifier>
-
+    
     <!-- .. Misc .......................................................... -->
-
+    
     <java.version>1.8</java.version>
     <wagon.provider.version>2.6</wagon.provider.version>
-
+    
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
-
+  
   <!-- == PROJECT METAINFORMATION ========================================= -->
-
+  
   <name>Automaton</name>
   <url>http://nexus.se.rwth-aachen.de/service/local/repositories/se-sites/content/monticore/automaton/${project.version}/</url>
   <inceptionYear>2013</inceptionYear>
-
+  
   <organization>
     <name>SE RWTH Aachen</name>
     <url>http://www.se-rwth.de/</url>
   </organization>
-
+  
   <mailingLists>
     <mailingList>
       <name>Developer</name>
       <post>monticore-dev@se-rwth.de</post>
     </mailingList>
   </mailingLists>
-
+  
   <issueManagement>
     <system>Trac</system>
     <url>https://sselab.de/lab2/private/trac/MontiCore/</url>
   </issueManagement>
-
+  
   <!-- == DEFAULT BUILD SETTINGS =========================================== -->
-
+  
   <build>
     <extensions>
       <extension>
@@ -80,17 +80,18 @@
         <version>${wagon.provider.version}</version>
       </extension>
     </extensions>
-
+    
     <plugins>
       <!-- MontiCore Generation -->
       <plugin>
         <groupId>de.monticore.mojo</groupId>
         <artifactId>monticore-maven-plugin</artifactId>
-        <version>${mc4.maven.version}</version>
+        <version>${monticore.version}</version>
         <executions>
           <execution>
             <configuration>
               <script>de/monticore/monticore_noemf.groovy</script>
+              <!--<script>${basedir}/src/main/resources/nosymtab.groovy</script>-->
             </configuration>
             <goals>
               <goal>generate</goal>
@@ -98,7 +99,7 @@
           </execution>
         </executions>
       </plugin>
-
+      
       <!-- Other Configuration -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -109,7 +110,7 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-
+      
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire.plugin}</version>
@@ -119,7 +120,7 @@
           </classpathDependencyExcludes>
         </configuration>
       </plugin>
-
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
@@ -128,7 +129,7 @@
           <tagNameFormat>automata-@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
-
+      
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
         <version>${source.plugin}</version>
@@ -141,7 +142,7 @@
           </execution>
         </executions>
       </plugin>
-
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
@@ -163,49 +164,48 @@
         </executions>
       </plugin>
     </plugins>
-
+  
   </build>
-
+  
   <dependencies>
-   <dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guava.version}</version>
+      <scope>compile</scope>
     </dependency>
-
+    
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
       <version>${jsr305.version}</version>
     </dependency>
-
+    
     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
       <version>${antlr.version}</version>
     </dependency>
-
+    
     <!-- MontiCore Dependencies -->
-    <!-- use this dependency fpr debugging reasons
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-generator</artifactId>
       <version>${monticore.version}</version>
     </dependency>
-    -->
-
+    
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-runtime</artifactId>
       <version>${monticore.version}</version>
     </dependency>
-
+    
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-grammar</artifactId>
       <version>${monticore.version}</version>
     </dependency>
-
+    
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-grammar</artifactId>
@@ -213,7 +213,7 @@
       <classifier>${grammars.classifier}</classifier>
       <scope>provided</scope>
     </dependency>
-
+    
     <!-- .. Test Libraries ............................................... -->
     <dependency>
       <groupId>junit</groupId>
@@ -221,7 +221,7 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
-
+    
     <dependency>
       <groupId>de.monticore</groupId>
       <artifactId>monticore-runtime</artifactId>
@@ -229,7 +229,7 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
-
+    
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
@@ -237,7 +237,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+  
   <reporting>
     <plugins>
       <plugin>
@@ -255,9 +255,9 @@
       </plugin>
     </plugins>
   </reporting>
-
+  
   <!-- == DISTRIBUTION ==================================================== -->
-
+  
   <distributionManagement>
     <repository>
       <id>se-nexus</id>
@@ -272,14 +272,14 @@
       <url>dav:https://nexus.se.rwth-aachen.de/content/sites/se-sites/monticore/automaton/${project.version}/</url>
     </site>
   </distributionManagement>
-
+  
   <repositories>
     <repository>
       <id>se-nexus</id>
       <url>https://nexus.se.rwth-aachen.de/content/groups/public/</url>
     </repository>
   </repositories>
-
+  
   <pluginRepositories>
     <pluginRepository>
       <id>se-nexus</id>
