--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,6 @@ version = '1.0.0-SNAPSHOT'
 description = "Automata DSL"
 sourceCompatibility = "1.8"
 
-configurations { grammar }
-
 dependencies {
     grammar (group:'de.monticore', name:'monticore-grammar', version:grammar_version, classifier: "grammars",
             changing: true) { force = true }
@@ -53,18 +51,25 @@ sourceSets {
 buildDir = file("$projectDir/target")
 
 // one task per file
-fileTree(grammarDir).each {
-    def g = it
-    task  "generate${it.getName().substring(0,it.getName().lastIndexOf('.'))}" (type: MCTask) {
-        grammar = file g
-        outputDir = file "$buildDir/generated-sources/monticore/sourcecode"
-        handcodedPath file("$projectDir/src/main/java")
-        modelPath file("$grammarDir")
-        def incCheckDir = file(grammarDir).toURI().relativize(g.toURI()).toString()
-        incCheckDir = incCheckDir.substring(0,incCheckDir.lastIndexOf('.')).toLowerCase()
-        def uptoDate = incCheck(outputDir.toString() +"/$incCheckDir/IncGenGradleCheck.txt")
-        outputs.upToDateWhen { uptoDate }
-    }
+//fileTree(grammarDir).each {
+//    def g = it
+//    task  "generate${it.getName().substring(0,it.getName().lastIndexOf('.'))}" (type: MCTask) {
+//        grammar = file g
+//        outputDir = file "$buildDir/generated-sources/monticore/sourcecode"
+//        handcodedPath file("$projectDir/src/main/java")
+//        modelPath file("$grammarDir")
+//        def incCheckDir = file(grammarDir).toURI().relativize(g.toURI()).toString()
+//        incCheckDir = incCheckDir.substring(0,incCheckDir.lastIndexOf('.')).toLowerCase()
+//        def uptoDate = incCheck(outputDir.toString() +"/$incCheckDir/IncGenGradleCheck.txt")
+//        outputs.upToDateWhen { uptoDate }
+//    }
+//}
+
+task  generateAutomata (type: MCTask) {
+  grammar = file "$grammarDir/Automata.mc4"
+  outputDir = file "$buildDir/generated-sources/monticore/sourcecode"
+  def uptoDate = incCheck("Automata.mc4")
+  outputs.upToDateWhen { uptoDate }
 }
 
 compileJava {
