--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     
     <monticore.version>6.2.0-SNAPSHOT</monticore.version>
     
-    <guava.version>23.0</guava.version>
+    <guava.version>25.1-jre</guava.version>
     <jsr305.version>3.0.0</jsr305.version>
     <junit.version>4.11</junit.version>
     <antlr.version>4.7.1</antlr.version>
