use mavenLocal if useLocalRepo is true

--- a/build.gradle
+++ b/build.gradle
@@ -47,12 +47,14 @@ dependencies {
 
 // has to be placed directly under the dependency definition, since otherwise the grammar configurations are not found
 repositories {
+    if(("true").equals(getProperty('useLocalRepo'))){
+        mavenLocal()
+    }
     maven {
         credentials.username mavenUser
         credentials.password mavenPassword
         url repo
     }
-    mavenLocal()
 }
 
 // configure non-standard source sets
