--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,6 @@ plugins {
 
 
 def mc_version  = '6.5.0-SNAPSHOT'
-def grammar_version = '6.4.0-SNAPSHOT'
 def guava_version = '25.1-jre'
 def findbugs_version = '3.0.0'
 def antlr_version = '4.7.1'
@@ -29,18 +28,18 @@ description = "Automata DSL"
 sourceCompatibility = "1.8"
 
 dependencies {
-    grammar (group:'de.monticore', name:'monticore-grammar', version:grammar_version, classifier: "grammars",
+    grammar (group:'de.monticore', name:'monticore-grammar', version:mc_version, classifier: "grammars",
             changing: true) { force = true }
     implementation group:'com.google.guava', name:'guava', version:guava_version
     implementation group:'com.google.code.findbugs', name:'jsr305', version:findbugs_version
     implementation group:'org.antlr', name:'antlr4-runtime', version:antlr_version
-    implementation group:'de.monticore', name:'monticore-runtime', version:grammar_version
+    implementation group:'de.monticore', name:'monticore-runtime', version:mc_version
     implementation (group:'de.monticore', name:'monticore-generator', version:mc_version,
                    changing: true) { force = true }
-    implementation (group:'de.monticore', name:'monticore-grammar', version:grammar_version,
+    implementation (group:'de.monticore', name:'monticore-grammar', version:mc_version,
                    changing: true) { force = true }
     testImplementation group:'junit', name:'junit', version:junit_version
-    testImplementation (group:'de.monticore', name:'monticore-runtime', version:grammar_version,
+    testImplementation (group:'de.monticore', name:'monticore-runtime', version:mc_version,
                        classifier:"tests", changing: true) { force = true }
     testImplementation group:'ch.qos.logback', name:'logback-classic', version:logback_version
 }
