--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@ mavenUser=${username}
 mavenPassword=${password}
 repo=https://nexus.se.rwth-aachen.de/content/groups/public
 useLocalRepo=false
+
+# versions
+mc_version=6.5.0-SNAPSHOT
+se_commons_version =1.7.11-SNAPSHOT
