--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import de.monticore.MCTask
 
 plugins {
     id "java"
-    id "monticore"  version "6.5.0-SNAPSHOT" // MontiCore Plugin
+    id "monticore"  version "$mc_version" // MontiCore Plugin
     id "maven-publish"
     id "com.github.johnrengelman.shadow" version "4.0.4"
     // useful reports
@@ -13,7 +13,6 @@ plugins {
 }
 
 
-def mc_version  = '6.5.0-SNAPSHOT'
 def guava_version = '25.1-jre'
 def findbugs_version = '3.0.0'
 def antlr_version = '4.7.1'
@@ -28,20 +27,17 @@ description = "Automata DSL"
 sourceCompatibility = "1.8"
 
 dependencies {
-    grammar (group:'de.monticore', name:'monticore-grammar', version:mc_version, classifier: "grammars",
-            changing: true) { force = true }
-    implementation group:'com.google.guava', name:'guava', version:guava_version
-    implementation group:'com.google.code.findbugs', name:'jsr305', version:findbugs_version
-    implementation group:'org.antlr', name:'antlr4-runtime', version:antlr_version
-    implementation group:'de.monticore', name:'monticore-runtime', version:mc_version
-    implementation (group:'de.monticore', name:'monticore-generator', version:mc_version,
-                   changing: true) { force = true }
-    implementation (group:'de.monticore', name:'monticore-grammar', version:mc_version,
-                   changing: true) { force = true }
-    testImplementation group:'junit', name:'junit', version:junit_version
-    testImplementation (group:'de.monticore', name:'monticore-runtime', version:mc_version,
-                       classifier:"tests", changing: true) { force = true }
-    testImplementation group:'ch.qos.logback', name:'logback-classic', version:logback_version
+  implementation "de.monticore:monticore-runtime:$mc_version"
+  implementation "de.monticore:monticore-grammar:$mc_version"
+  grammar "de.monticore:monticore-grammar:$mc_version:grammars"
+  implementation "de.se_rwth.commons:se-commons-logging:$se_commons_version"
+  implementation "de.se_rwth.commons:se-commons-utilities:$se_commons_version"
+  implementation group:'com.google.guava', name:'guava', version:guava_version
+  implementation group:'org.antlr', name:'antlr4-runtime', version:antlr_version
+  testImplementation "de.monticore:monticore-generator:$mc_version"
+  testImplementation group:'junit', name:'junit', version:junit_version
+  testImplementation "de.monticore:monticore-runtime:$mc_version:tests"
+  testImplementation group:'ch.qos.logback', name:'logback-classic', version:logback_version
 }
 
 // has to be placed directly under the dependency definition, since otherwise the grammar configurations are not found
