--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,18 @@ sourceCompatibility = "1.8"
 dependencies {
   implementation "de.monticore:monticore-runtime:$mc_version"
   implementation "de.monticore:monticore-grammar:$mc_version"
-  grammar "de.monticore:monticore-grammar:$mc_version:grammars"
+  grammar ("de.monticore:monticore-grammar:$mc_version"){ capabilities {
+            requireCapability("$group:monticore-grammar-grammars")}
+          }
   implementation "de.se_rwth.commons:se-commons-logging:$se_commons_version"
   implementation "de.se_rwth.commons:se-commons-utilities:$se_commons_version"
   implementation group:'com.google.guava', name:'guava', version:guava_version
   implementation group:'org.antlr', name:'antlr4-runtime', version:antlr_version
   testImplementation "de.monticore:monticore-generator:$mc_version"
   testImplementation group:'junit', name:'junit', version:junit_version
-  testImplementation "de.monticore:monticore-runtime:$mc_version:tests"
+  testImplementation ("de.monticore:monticore-runtime:$mc_version"){ capabilities {
+    requireCapability("$group:monticore-runtime-tests")}
+  }
   testImplementation group:'ch.qos.logback', name:'logback-classic', version:logback_version
 }
 
@@ -144,3 +148,5 @@ task testReport(type: TestReport) {
 task buildAll(type: GradleBuild) {
   tasks = [ 'build' ]
 }
+
+defaultTasks 'build'
