--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ variables:
 
 build:
   stage: build
+  image: maven:3.5.4-jdk-8-alpine
   script:
     - mvn $MAVEN_CLI_OPTS clean install -U
   artifacts:
