delete handwritten tool

--- a/build.gradle
+++ b/build.gradle
@@ -103,7 +103,7 @@ javadoc.failOnError(false)
 
 shadowJar { // all in one jar
     manifest {
-        attributes "Main-Class": "automata.AutomataTool"
+        attributes "Main-Class": "automata.AutomataCLI"
     }
     archiveClassifier =  "cli"
 }
