--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,11 @@ sourceSets {
 }
 buildDir = file("$projectDir/target")
 
+java {
+    registerFeature('grammars') {
+        usingSourceSet(sourceSets.grammars)
+    }
+}
 
 dependencies {
   implementation "de.monticore:monticore-runtime:$mc_version"
