--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ sourceSets {
   main.java.srcDirs += [ "$projectDir/target/generated-sources/monticore/sourcecode"]
   grammars {
     resources {
-        srcDirs([grammarDir, grammarOutDir])
+        srcDirs([grammarDir])
         include "**/*.mc4"
     }
 }
