--- a/build.gradle
+++ b/build.gradle
@@ -101,9 +101,9 @@ javadoc.failOnError(false)
 
 shadowJar { // all in one jar
     manifest {
-        attributes "Main-Class": "automata.AutomataCLI"
+        attributes "Main-Class": "automata.AutomataTool"
     }
-    archiveClassifier =  "cli"
+    archiveClassifier =  "tool"
 }
 
 // build grammar jar as well
